# QtAppFramework

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  QSingleApplication.cpp  QSingleApplication.h
test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  res.qrc
test/res/: black.css
